[package]
name = "quiz"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "*", default-features = false, features = [
  "std",
  "derive",
] }
axum = { version = "*", features = ["form"] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

json = { version = "*" }
csv = "1.4.0"

[dev-dependencies]
http-body-util = "*"
tower = { version = "*", features = ["util"] }
